--- a/site-contents/scss/partials/_base.scss
+++ b/site-contents/scss/partials/_base.scss
@@ -1,7 +1,9 @@
 /* ------------------------------------------------------------ *\
 	Base
 \* ------------------------------------------------------------ */
-
+html {
+	overflow-x: hidden;
+}
 body { 
 	min-width: 320px;
 	color: $dark;
@@ -9,7 +11,8 @@ body {
 	font-size: 16px;
 	font-weight: 400;
 	overflow-x: hidden!important;
-	max-width: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 a { color: $color-link; text-decoration: none; transition: ease-in-out .3s; }
