--- a/site-contents/scss/partials/modules/_module_logos.scss
+++ b/site-contents/scss/partials/modules/_module_logos.scss
@@ -2,14 +2,15 @@
  Logos
 \* ------------------------------------------------------------ */
 .problemWrapper {
-    width: 80%;
+    width: 240px;
     margin: 0 auto;
 }
 .problem_image {
     background: url(../css/images/Insurance01-03.svg);
     // width: 300px;
     // height: 400px;
-    width: 250px;
+    width: 240px;
+    
     height: 300px;
     display: inline-block;
     background-size: contain;
@@ -29,6 +30,7 @@
         height: 150px;
         position: absolute;
         top: 40px;
+        left: 0;
 
     }
     & .problemFull2 {
@@ -38,10 +40,15 @@
         right: 33px;
     }
 }
+.democratic_inner {
+    width: 240px;
+    margin: 0 auto;
+}
 .democraticInsurance {
     margin: 0 auto;
     position: relative;
-    height: 420px;
+    height: 360px;
+    width: 100%;
     
     & .insuranceImg {
         position: absolute;
@@ -52,7 +59,8 @@
     }
     & .insuranceBounce {
         position: absolute;
-        top: -25px;
+        // top: -25px;
+        top: 47px;
         -ms-transform: translatey(0px);
         transform: translatey(0px);
         z-index: 1;
@@ -61,7 +69,8 @@
         margin: auto;
         transform: translatey(0px);
         animation: float 6s ease-in-out infinite;
-        width: 84%;
+        // width: 84%;
+        width: 93%;
     }
 }
 @keyframes float {
@@ -144,20 +153,24 @@
         width: 35%;
         margin: 0 auto;
     }
+    .democratic_inner {
+        width: 500px;
+        margin: 0 auto;
+    }
     .democraticInsurance {
         height: 500px;
+        width: 400px;
         & .insuranceImg {
-            position: absolute;
-            left: 0;
-            right: 0;
-            margin: auto;
-            height: 300px;
-            bottom: 0;
+            // position: absolute;
+            // left: 0;
+            // right: 0;
+            // margin: auto;
+            // height: 300px;
+            // bottom: 0;
         }
         & .insuranceBounce {
-            top: -50px;
-            width: auto;
-            height: 432px;
+            // top: -40px;
+            width: 75%;
         }
     }
     //team
