--- a/site-contents/scss/partials/modules/_module_roadmap.scss
+++ b/site-contents/scss/partials/modules/_module_roadmap.scss
@@ -6,7 +6,7 @@
     & .scrolling-wrapper {
         -webkit-overflow-scrolling: touch;
         overflow-x: scroll;
-        overflow-y: hidden;
+        // overflow-y: hidden;
         height: 420px;
         padding-top: 65px;
     }
